package platform.behaviors;

public interface AdaptivePolicy{
    public void init();

}
