@startuml

title __BEHAVIORS's Class Diagram__\n

  package platform {
    package platform.behaviors {
      class AdaptationTypeManager {
          - stringToAdaptationMap : HashMap<String, AdaptivePolicy>
          + AdaptationTypeManager()
          + AdaptationTypeManager()
          + getAdaptivePolicy()
          + getStringToAdaptivePolicyMap()
          + setStringToAdaptivePolicyMap()
      }
    }
  }
  

  package platform {
    package platform.behaviors {
      interface AdaptivePolicy {
          {abstract} + init()
      }
    }
  }
  

  package platform {
    package platform.behaviors {
      abstract class CameraMAPEBehavior {
          - cameraHashMapMap : Map<Camera, HashMap<String, Object>>
          + behaviourInit()
          + getCameraHashMapMap()
          + setCameraHashMapMap()
          {abstract} + plan()
          {abstract} + analyse()
          {abstract} + monitor()
          {abstract} + execute()
      }
    }
  }
  

  package platform {
    package platform.behaviors {
      abstract class ContMotionController {
          # calculatePTZVectorToMoveToBottom()
          # calculatePTZVectorToMoveToTop()
          # calculatePTZVectorToMoveToCenter()
          # setPTinX()
          # setPTinY()
      }
    }
  }
  

  package platform {
    package platform.behaviors {
      abstract class GoalMAPEBehavior {
          - hashMap : Map<String, Object>
          + behaviourInit()
          + getHaspMap()
          + setCameraHashMapMap()
          {abstract} + plan()
          {abstract} + analyse()
          {abstract} + monitor()
          {abstract} + execute()
      }
    }
  }
  

  package platform {
    package platform.behaviors {
      abstract class MotionController {
          - commandMap : Map<Camera, PTZCommand>
          - lastStopCommand : Map<Camera, Boolean>
          + motInit()
          + planMotion()
          {abstract} + calculatePTZVector()
          + executeMotion()
      }
    }
  }
  

  CameraMAPEBehavior -up-|> AdaptivePolicy
  ContMotionController -up-|> MotionController
  GoalMAPEBehavior -up-|> AdaptivePolicy
  MotionController -up-|> AdaptivePolicy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
